@@ -20,6 +20,7 @@ Bug fixes
  - [core] handle properly mails using windows-1255 charset (#4124)
  - [core] fixed email reminders sent multiple times (#4100)
  - [core] fixed LDIF to vCard conversion for non-handled multi-value attributes (#4086)
+ - [core] properly honor the "include in freebusy" setting (#3354)
  - [eas] set reply/forwarded flags when ReplaceMime is set (#4133)
  - [eas] remove alarms over EAS if we don't want them (#4059)
  - [eas] correctly set RSVP on event invitations
